@@ -5,6 +5,8 @@ Build Time:  BUILDTIME
 CHANGELOG
 =================================================
 
+* Fixed: Video module problem with Vimeo movies.
+
 = 2.1 =
 -------------------------------------------------
 * Added: Text color option for course certificate.
